syntax = "proto3";

option csharp_namespace = "PetServiceProtos";

// https://github.com/protocolbuffers/protobuf/blob/main/src/google/protobuf/wrappers.proto
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service PetService {
	rpc GetPetById (GetPetByIdRequest) returns (GetPetByIdResponse);
	rpc GetClientPets (GetPetsRequest) returns (GetPetsResponse);
	rpc CreatePet (CreatePetRequest) returns (CreatePetResponse);
	rpc UpdatePet (UpdatePetRequest) returns (UpdatePetResponse);
	rpc DeletePet (DeletePetRequest) returns (DeletePetResponse);
}

message GetPetByIdRequest {
        int32 petId = 1;
}

message GetPetByIdResponse {
        PetResponse pet = 1;
        int32 errCode = 2;
        string errMessage =3;
}

message GetPetsRequest{
    int32 clientId = 1;
}

message GetPetsResponse{
    repeated PetResponse pets = 1;
    int32 errCode = 2;
    string errMessage =3;
}

message CreatePetRequest {
        int32 clientId = 1; 
        string name = 2;
        google.protobuf.Timestamp birthday = 3;
}

message CreatePetResponse {
		google.protobuf.Int32Value petId = 1;
		int32 errCode = 2;
        string errMessage =3;

}

message UpdatePetRequest {
        int32 petId = 1;
        int32 clientId = 2; 
        string name = 3;
        google.protobuf.Timestamp birthday = 4;
}

message UpdatePetResponse {
		int32 errCode = 1;
        string errMessage =2;
}

message DeletePetRequest {
        int32 petId = 1;
}

message DeletePetResponse {
		int32 errCode = 1;
        string errMessage =2;
}

message PetResponse {
		int32 petId = 1;
		int32 clientId = 2;
        string name = 3;
        google.protobuf.Timestamp birthday = 4;
}